[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Valera Galeev <71322091+webAmoeba@users.noreply.github.com>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]


[tool.poetry.dependencies]
python = "^3.13"
prompt = "^0.4.1"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
brain-games = "brain_games.scripts.games.brain_games:main"
brain-even = "brain_games.scripts.games.brain_even:is_even"
brain-calc = "brain_games.scripts.games.brain_calc:calc"
