[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "A collection of fun and challenging games to test your mathematical and logical skills."
authors = ["Valera Galeev. tg: @webAmoeba"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]
repository = "https://github.com/webAmoeba/python-project-49"

[tool.poetry.dependencies]
python = "^3.13"
prompt = "^0.4.1"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
brain-games = "brain_games.scripts.games.brain_games:main"
brain-even = "brain_games.scripts.games.brain_even:main"
brain-calc = "brain_games.scripts.games.brain_calc:main"
brain-gcd = "brain_games.scripts.games.brain_gcd:main"
brain-progression = "brain_games.scripts.games.brain_progression:main"
brain-prime = "brain_games.scripts.games.brain_prime:main"

[tool.poetry.classifiers]
# Classifiers help users find your project by categorizing it
"Development Status :: 3 - Alpha"
"Intended Audience :: Developers"
"License :: OSI Approved :: MIT License"
"Programming Language :: Python :: 3"
"Programming Language :: Python :: 3.13"
"Operating System :: OS Independent"
